syntax = "proto3";

option go_package = ".;proto";

service PostService{
  rpc GetPostDetail(PostID) returns(PostDetail);

}


message PostID {
  int64  PostId = 1;
}

message PostDetail{
  string AuthorName = 1;
  int64 VoteNum = 2;
  int64 AuthorID = 4;
  int32 Status = 5;
  string Title = 6;
  string Content = 7;
}



